# modulaptop-store

./: Makefile  pyproject.toml  requirements.txt
app/: main.py
app/base/: application.py  constants.py  settings.py
app/base/dependencies/: db.py
app/db/: session.py
app/db/models/: component_order.py  components.py  customers.py  laptop_order.py  laptops.py  laptops_components.py  orders.py  shipments.py
app/modules/: servicer.py
app/modules/components/: schemas.py  view.py
app/modules/customers/: schemas.py  view.py
app/modules/healthcheck/: view.py
app/modules/laptop_component/: schemas.py
app/modules/laptop_order/: schemas.py
app/modules/laptops/: schemas.py  view.py
app/modules/laptops_components/: schemas.py
dev/: docker-compose.yml
docker-specs/: Dockerfile
docker-specs/scripts/: entrypoint.sh  start-reload.sh  start.sh
migrations/: README.md  env.py
migrations/versions/: 06a5ce277e90_create_laptops_components_table.py  0e0aea7ffe40_create_orders_table.py  2c044db51519_create_shipments_table.py  5f7cec578a08_create_component_order_table.py  c0945a7be08a_create_components_table.py  daf7d940d905_create_laptop_order_table.py  e4af226b6c85_create_laptops_table.py  eb649a8254e9_create_customers_table.py
tests/: conftest.py
tests/api_tests/: test_components.py  test_customers.py  test_laptops.py  test_orders.py  test_shipments.py
tests/factories/: __init__.py  component_order.py  components.py  customers.py  laptop_order.py  laptops.py  laptops_components.py  orders.py  shipments.py
tests/fixtures/: db.py
(+4 files in other folders)
